Changelog
=========

1.2.1 - unreleased
-------------------

- Some XHTML fixes to be also XHTML Strict compliant.
  See http://dev.plone.org/plone/ticket/4379
  [keul]

1.2 - July 13, 2009
-------------------

- Fix ComponentLookupError on portlet management screen for special use cases
  such as collective.portletpage, where not all content have the same 
  managers.
  [optilude]

- Template cleanup: add missing xmlns declarations and fix invalid markup.
  [wichert]


1.2rc3 - April 8, 2009
----------------------

- Correct import error in editmanager.py.
  [optilude]

- Correct case in the feedparser dependency.
  [wichert]


1.2rc1 - March 27, 2009
-----------------------

- Added a permission check to portlets' add view.
  Fixes http://dev.plone.org/plone/ticket/8510
  [optilude]


1.2b1 - March 7, 2009
---------------------

- Fixed the various portlets to no longer use portal_url, but use the 
  navigation_root_url from the plone_portal_state view. Changed the
  manage-dashboard view to be available on an INavigationRoot.
  This implements http://plone.org/products/plone/roadmap/234
  [calvinhp]

- Removed portlets/feedparser.py.  Added FeedParser as external
  requirement in setup.py instead of shipping with it.
  (This is Plip 197: http://plone.org/products/plone/roadmap/197)
  [maurits]

- Added title option to the RSS portlet.
  [davisagli]

- Clean-up unnecessary variable declarations within navigation_recurse.pt.
  Let the default view on the Link type decide what's best
  [andrewb]

1.1.7 (Unreleased)
------------------

- Fixed exportimport to support xml CDATA, thanks to lucie
  [calvinhp]

1.1.6 - 2009-03-07
------------------

- Fixed new portlet template footer so it will validate, fixes 
  http://dev.plone.org/plone/ticket/8769 thanks to bandigarf
  [calvinhp]

- Made the test independent of default content created in a site. This
  allows them to pass in both Plone 3.x and 4.x.
  [hannosch]
