@@ -4,9 +4,14 @@ Changelog
 1.2.1 - unreleased
 -------------------
 
+- Support for portal-relative paths in portlets.xml keys.
+  Fixes http://dev.plone.org/plone/ticket/9437
+  [naro]
+
 - Some XHTML fixes to be also XHTML Strict compliant.
   See http://dev.plone.org/plone/ticket/4379
   [keul]
+
 
 1.2 - July 13, 2009
 -------------------
